<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_ModbusMasterStateRun" Id="{d55b591e-f35b-45a7-a148-bb45d1165890}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_ModbusMasterStateRun :
(
	Trigger 		:=0, //0
	SetParameters 	:= 10, // 10
	SendRequest		:= 20,  // 20
	Wait_respond	:= 40, // 40
	ConvertRawData	:= 50, // 50
	Return_done		:=60 ,// 60
	
	SetParametersWrite 	:= 70,
	SendRequestWriteSingleRegister	:= 80,
	SendRequestWRiteMultiRegister	:= 85,
	WaitACycleAftersend := 90,
	Return_doneWrite	:=120,

	
	notKnow			:= 210//210

);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>